--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@ li {
 </style>
 
 <div class="main">
-    <h1>Shopping List</h1>
+    <h1>Deb's List</h1>
     <div class="inner">
         <form class="add-item-form">
             <label for="item-input">Add an item</label>
